--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <p class="perlahan">sembunyi perlahan 1</p>
     <p class="perlahan">sembunyi perlahan 2</p>
     <button id="tombol1">sembunyi</button>
+    
+    <p id="elemen2">mengubah isi elemen</p>
+    <button id="tombol2">Ubah isi</button>
 
     <script>
       // memastikan dokumen html sudah siap
@@ -42,6 +45,11 @@
           $("#tombol1").click(function(){
             $("#elemen1").hide()
             $(".perlahan").fadeOut("slow")
+          })
+          
+          //mngubah isi paragraf
+          $("#tombol2").click(function() {
+            $("#elemen2").html("diisi <b>apa aja</b>")
           })
         })
     </script>
