menampilkan elemen yang tersembunyi

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
           //mngubah isi paragraf
           $("#tombol2").click(function() {
             $("#elemen2").html("diisi <b>apa aja</b>")
+            $(".perlahan").fadeIn("800")
           })
+          
         })
     </script>
   <!-- Project -->
